# redshift-test

./: Cargo.toml  Embed.toml  memory.x  rtt
.cargo/: config.toml
LPC55S28_HAL/: Cargo.toml
LPC55S28_HAL/src/: lib.rs  prelude.rs
LPC55S28_PAC/: Cargo.toml  LPC55S28.svd  device.x
LPC55S28_PAC/src/: adc0.rs  ahb_secure_ctrl.rs  anactrl.rs  casper.rs  crc_engine.rs  ctimer0.rs  dbgmailbox.rs  dma0.rs  flash.rs  flash_cfpa0.rs  flash_cmpa.rs  flash_key_store.rs  flexcomm0.rs  gint0.rs  gpio.rs  hashcrypt.rs  i2c0.rs  i2s0.rs  inputmux.rs  iocon.rs  lib.rs  mrt0.rs  ostimer.rs  pint.rs  plu.rs  pmc.rs  prince.rs  puf.rs  rng.rs  rtc.rs  sau.rs  scn_scb.rs  sct0.rs  sdif.rs  secgpio.rs  spi0.rs  syscon.rs  sysctl.rs  usart0.rs  usb0.rs  (+6 more)
LPC55S28_PAC/src/adc0/: cal_gar.rs  cal_gbr.rs  cfg.rs  cmdh1.rs  cmdh10.rs  cmdh11.rs  cmdh12.rs  cmdh13.rs  cmdh14.rs  cmdh15.rs  cmdh2.rs  cmdh3.rs  cmdh4.rs  cmdh5.rs  cmdh6.rs  cmdh7.rs  cmdh8.rs  cmdh9.rs  cmdl1.rs  cmdl10.rs  cmdl11.rs  cmdl12.rs  cmdl13.rs  cmdl14.rs  cmdl15.rs  cmdl2.rs  cmdl3.rs  cmdl4.rs  cmdl5.rs  cmdl6.rs  cmdl7.rs  cmdl8.rs  cmdl9.rs  ctrl.rs  cv.rs  de.rs  fctrl.rs  gcc.rs  gcr.rs  ie.rs  (+10 more)
LPC55S28_PAC/src/ahb_secure_ctrl/: cpu0_lock_reg.rs  cpu1_lock_reg.rs  master_sec_anti_pol_reg.rs  master_sec_level.rs  misc_ctrl_dp_reg.rs  misc_ctrl_reg.rs  sec_cpu_int_mask0.rs  sec_cpu_int_mask1.rs  sec_ctrl_ahb_port10_slave0_rule.rs  sec_ctrl_ahb_port10_slave1_rule.rs  sec_ctrl_ahb_port8_slave0_rule.rs  sec_ctrl_ahb_port8_slave1_rule.rs  sec_ctrl_ahb_port9_slave0_rule.rs  sec_ctrl_ahb_port9_slave1_rule.rs  sec_ctrl_ahb_sec_ctrl_mem_rule.rs  sec_ctrl_apb_bridge0_mem_ctrl0.rs  sec_ctrl_apb_bridge0_mem_ctrl1.rs  sec_ctrl_apb_bridge0_mem_ctrl2.rs  sec_ctrl_apb_bridge1_mem_ctrl0.rs  sec_ctrl_apb_bridge1_mem_ctrl1.rs  sec_ctrl_apb_bridge1_mem_ctrl2.rs  sec_ctrl_apb_bridge1_mem_ctrl3.rs  sec_ctrl_apb_bridge_slave_rule.rs  sec_ctrl_flash_mem_rule0.rs  sec_ctrl_flash_mem_rule1.rs  sec_ctrl_flash_mem_rule2.rs  sec_ctrl_flash_rom_slave_rule.rs  sec_ctrl_ram0_mem_rule0.rs  sec_ctrl_ram0_mem_rule1.rs  sec_ctrl_ram0_slave_rule.rs  sec_ctrl_ram1_mem_rule0.rs  sec_ctrl_ram1_mem_rule1.rs  sec_ctrl_ram1_slave_rule.rs  sec_ctrl_ram2_mem_rule0.rs  sec_ctrl_ram2_mem_rule1.rs  sec_ctrl_ram2_slave_rule.rs  sec_ctrl_ram3_mem_rule0.rs  sec_ctrl_ram3_mem_rule1.rs  sec_ctrl_ram3_slave_rule.rs  sec_ctrl_ram4_mem_rule0.rs  (+15 more)
LPC55S28_PAC/src/anactrl/: analog_ctrl_status.rs  bod_dcdc_int_ctrl.rs  bod_dcdc_int_status.rs  freq_me_ctrl.rs  fro192m_ctrl.rs  fro192m_status.rs  ringo0_ctrl.rs  ringo1_ctrl.rs  ringo2_ctrl.rs  usbhs_phy_ctrl.rs  xo32m_ctrl.rs  xo32m_status.rs
LPC55S28_PAC/src/casper/: areg.rs  breg.rs  creg.rs  ctrl0.rs  ctrl1.rs  dreg.rs  intenclr.rs  intenset.rs  intstat.rs  loader.rs  lock.rs  mask.rs  remask.rs  res0.rs  res1.rs  res2.rs  res3.rs  status.rs
LPC55S28_PAC/src/crc_engine/: mode.rs  seed.rs  sum_wr_data_sum.rs  sum_wr_data_wr_data.rs
LPC55S28_PAC/src/ctimer0/: ccr.rs  cr.rs  ctcr.rs  emr.rs  ir.rs  mcr.rs  mr.rs  msr.rs  pc.rs  pr.rs  pwmc.rs  tc.rs  tcr.rs
LPC55S28_PAC/src/dbgmailbox/: csw.rs  id.rs  request.rs  return_.rs
LPC55S28_PAC/src/dma0/: abort0.rs  active0.rs  busy0.rs  channel.rs  ctrl.rs  enableclr0.rs  enableset0.rs  errint0.rs  inta0.rs  intb0.rs  intenclr0.rs  intenset0.rs  intstat.rs  settrig0.rs  setvalid0.rs  srambase.rs
LPC55S28_PAC/src/flash/: cmd.rs  dataw.rs  event.rs  int_clr_enable.rs  int_clr_status.rs  int_enable.rs  int_set_enable.rs  int_set_status.rs  int_status.rs  module_id.rs  starta.rs  stopa.rs
LPC55S28_PAC/src/flash_cfpa0/: cmpa_prog_in_progress.rs  customer_defined.rs  dcfg_cc_socu_dflt.rs  dcfg_cc_socu_pin.rs  enable_fa_mode.rs  header.rs  image_key_revoke.rs  ns_fw_version.rs  prince_region0_iv_code_prince_region0_iv_body0.rs  prince_region0_iv_code_prince_region0_iv_body1.rs  prince_region0_iv_code_prince_region0_iv_body10.rs  prince_region0_iv_code_prince_region0_iv_body11.rs  prince_region0_iv_code_prince_region0_iv_body2.rs  prince_region0_iv_code_prince_region0_iv_body3.rs  prince_region0_iv_code_prince_region0_iv_body4.rs  prince_region0_iv_code_prince_region0_iv_body5.rs  (+80 more)
LPC55S28_PAC/src/flash_cmpa/: rotkh.rs  (+15 more)
LPC55S28_USB/: Cargo.toml
LPC55S28_USB/src/: bus.rs  lib.rs
src/: delay.rs  gpio.rs  main.rs  sensor.rs  setup.rs  spi.rs  spi_old.rs  timer.rs
(+880 files in other folders)
