[package]
authors = ["Tyler Richard <tylergames251@gmail.com>"]
name = "redshift-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = { version = "0.6.15", features = ["device"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = "0.4.0"
usb-device = "0.2.9"
embedded-hal-bus = "0.1.0-alpha.3"
lpc55-hal = { version = "0.3.0", features = ["lpc55-rtic", "rtic-peripherals"] }
embedded-hal-alpha = {package = "embedded-hal", version = "1.0.0-alpha.11" }
embedded-hal = {package = "embedded-hal", version = "0.2.7" }
rtic = { version = "2.0.1", features = ["thumbv8main-backend"] }
usbd-hid = "0.6.1"
critical-section = "1.1.2"
atomic = "0.6.0"
bytemuck = "1.13.1"
nb = "1.1.0"
lpc55-usbhs = { git = "https://github.com/great-houk/lpc55-usbhs" }
paw3399 = { git = "https://github.com/great-houk/paw3399" }
# usbd-serial = { git = "https://github.com/great-houk/usbd-serial-hs" }

[profile.release]
codegen-units = 1
debug = true
lto = true

[profile.dev]
opt-level = 1
codegen-units = 1
lto = true

[[bin]]
name = "redshift-test"
test = false
bench = false
