[package]
authors = ["Tyler Richard <tylergames251@gmail.com>"]
name = "redshift-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = { version = "0.6.15", features = ["device"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = "0.4.0"
usb-device = "0.2.9"
usbd-serial = { git = "https://github.com/great-houk/usbd-serial-hs" }
nb = "1.1.0"
embedded-hal-alpha = {package = "embedded-hal", version = "1.0.0-alpha.11" }
embedded-hal = {package = "embedded-hal", version = "0.2.7" }
embedded-hal-bus = "0.1.0-alpha.3"
paw3399 = { git = "https://github.com/great-houk/paw3399" }
heapless = { version = "0.7.16", features = ["ufmt-impl"] }
lpc55-hal = "0.3.0"
lpc55-usbhs = { git = "https://github.com/great-houk/lpc55-usbhs" }

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

# this lets you use `cargo fix`!
[[bin]]
name = "redshift-test"
test = false
bench = false
