[package]
name = "LPC55S28_HAL"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"
LPC55S28-PAC = { path = "../LPC55S28_PAC", features = ["rt", "critical-section"] }
cortex-m = "0.7.7"
nb = "1.1.0"
void = { version = "1.0.2", default-features = false }
